fix padding in nav on mobile

--- a/src/css/_layout.scss
+++ b/src/css/_layout.scss
@@ -52,6 +52,7 @@ body {
       max-width: 1280px;
       display: flex;
       flex-grow: 1;
+      padding: 0;
 
       @media only screen and (max-width: $breakpoint) {
         flex-wrap: wrap;
